Change Log for OpenXava project
===============================

- @ElementCollection of JPA 2 supported.
- Collections editable at cell mode, like a spreadsheet, available for @ElementCollection. 
- All collection elements and the container entity are persisted at once, available for @ElementCollection.
- Fix: The @LabelStyle annotation is not supported with the new renderer.
- Look and feel of date editor improved.
- Fix: Error messages for @Size in collections show 'Element' in English always, even if English is not used.
- Fix: Top field with little margin on top with the new renderer.
- Fix: Html id for frames not correct for references with new renderer.
- Fix: Properties aligned by column when it should not in the new renderer.
- Fix: Property icons are not aligned correctly with the new renderer. 
- Fix: Scale defined in default-size.xml is ignored when formatting.
- Fix: Scale definition from @Column and @Digits is ignored when formatting.
- When @Digits is specified default scale is ignored even if fraction is not specified.
- New methods setValueInCollection(), assertEditableInCollection() and assertEditableInCollection() in ModuleTestBase.
- New method noFirstTokenWithoutFirstDelim() in Strings.
- New Addons project added to distribution to contain extended features outside of the OpenXava core.
- New getPopupPDFPageCount() method in ModuleTestBase.
- New stereotype FILE for attached files, it can store the files in DB or file system.
- Several reports in one PDF with the new JasperConcatReportBaseAction.
- New is/setCollapsed() methods in View to close a frame of a reference or collection programmatically.
- @Collapsed annotation to initiate collections and references with the frame closed. Also allowed in XML components. 
- Added validateMinimum() and validateMaximum() to CollectionElementViewBaseAction. 
- Using module.jsp to execute modules from browser is no longer supported.